# beatrix

./: .env.test  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
beatrix-macro/: Cargo.toml
beatrix-macro/src/: lib.rs  model.rs
beatrix_core/: Cargo.toml
beatrix_core/src/: lib.rs  mongo.rs  rdms.rs  relational.rs
beatrix_core/src/mongo/: cursor.rs
beatrix_core/src/rdms/: mysql.rs  query.rs  select.rs
beatrix_core/src/relational/: db.rs  error.rs  field.rs  filters.rs  helpers.rs  query.rs  select.rs  sql.rs  table.rs
beatrix_core/src/relational/db/: postgres.rs
beatrix_helpers/: Cargo.toml
beatrix_helpers/src/: lib.rs
beatrix_macro/: Cargo.toml
beatrix_macro/src/: lib.rs  mongo.rs  relational.rs
src/: column.rs  entity.rs  lib.rs
tests/: entity.rs  mongo.rs
tests/factory/: mod.rs  mongo.rs
tests/rdms/mysql/: query_builder.rs  table_macro.rs
tests/rdms/postgres/: setup.sql  table_macro.rs
