[package]
name = "beatrix"
version = "0.1.0"
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beatrix_macro = { path="beatrix_macro", version = "0.1.0" }
beatrix_core = { path="beatrix_core", version = "0.1.0" }

[dev-dependencies]
serde = "1"
tokio = "*"
dotenv = "*"
serial_test = "*"
futures = "*"

[workspace]
members = [
    "beatrix_macro",
    "beatrix_core",
]
