[package]
name = "beatrix"
version = "0.1.0"
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "beatrix_macro",
    "beatrix_core",
    "beatrix_helpers",
]

[features]
default = ["postgres"]
postgres = ["beatrix_core/postgres", "beatrix_macro/postgres"]
mongo = ["beatrix_core/mongo", "beatrix_macro/mongo"]
mongo-async-std = ["beatrix_core/mongo-async-std", "beatrix_macro/mongo"]

[dependencies]
beatrix_macro = { path="beatrix_macro", version = "0.1.0" }
beatrix_core = { path="beatrix_core", version = "0.1.0" }
beatrix_helpers = { path="beatrix_helpers", version = "0.1.0" }

[dev-dependencies]
serde = {version = "1", features = ["derive"]}
# TODO: UPgrade to latest tokio
tokio = { version = "0.2", features = ["full"] }
dotenv = "*"
futures = "*"

[[test]]
name = "mongo"
path = "tests/mongo.rs"
required-features = ["mongo"]

[[test]]
name = "table-macro"
path = "tests/rdms/postgres/table_macro.rs"
required-features = ["postgres"]