[package]
name = "beatrix_core"
version = "0.1.0"
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
serde = "1.0.119"
async-trait = "0.1.42"
thiserror = "1.0"
futures = "0.3"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["mongodb/tokio-runtime"]
async-std-runtime = ["mongodb/async-std-runtime"]
