[package]
name = "beatrix_helpers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.78", features = ["full", "extra-traits"] }
beatrix_core = { path="../beatrix_core", version = "0.1.0" }
proc-macro2 = "1.0.29"