[package]
name = "beatrix_macro"
version = "0.1.0"
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
postgres = ["beatrix_core/postgres"]
mongo = ["beatrix_core/mongo"]

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.29"
beatrix_core = { path="../beatrix_core", version = "0.1.0" }